Fixed file path error
Logo image had issues with case sensitivities.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <button>cool</button>
             
         </div>
-        <div id="logoimg"><img src="website_logo.png" height="300" width="300"> </div>
+        <div id="logoimg"><img src="websitelogo.png" height="300" width="300"> </div>
 
         <!--<div id="logo">
           <p>Welcome to my site.</p>
