Added SoundCloud Player

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     });
 });
     </script>
+    <script type="text/javascript" src="https://stratus.soundcloud.com/stratus.js"></script>
+
     </head>
     <body>
     <div id="bottombarlayer">
@@ -31,6 +33,15 @@
             
         </div>
         <div id="logoimg"><img src="websitelogo.png" height="300" width="300"> </div>
+           <script type="text/javascript">
+  $(document).ready(function(){
+    $.stratus({
+      key: "aafaad19ce015a2d6e5db08b690e41f6",
+      links: "https://soundcloud.com/toko-dougherty/sets/soundcloud"
+      auto_play: true
+    });
+  });
+</script>
 
         <!--<div id="logo">
           <p>Welcome to my site.</p>
