--- a/test.html
+++ b/test.html
@@ -17,7 +17,41 @@
 
 </head>
 <body>
-    
+    <body><!-- Stratus--><div id="stratus"><div id="drawer"><div id="artwork"><img src="https://i1.sndcdn.com/artworks-000083835924-6s7vfi-t300x300.jpg"></div><ul id="tracks"><li class="track track_156676597 current"><span class="user">Zeds Dead</span><span class="title">Zeds Dead - Collapse (feat. Memorecks)</span>
+  <span class="duration">4.44</span></li><li class="track track_145175216"><span class="user">Zeds Dead</span><span class="title">Zeds Dead - Hadouken</span>
+  <span class="duration">3.58</span></li><li class="track track_150745932"><span class="user">Zeds Dead</span><span class="title">Zeds Dead - Lost You (feat. Twin Shadow &amp; D'Angelo Lacy)</span>
+  <span class="duration">3.38</span></li><li class="track track_156827913"><span class="user">Zeds Dead</span><span class="title">Zeds Dead - Bustamove</span>
+  <span class="duration">2.48</span></li><li class="track track_156827895"><span class="user">Zeds Dead</span><span class="title">Zeds Dead - Stoned Capone (feat.  Omar LinX and Big Gigantic)</span>
+  <span class="duration">3.40</span></li><li class="track track_156827873"><span class="user">Zeds Dead</span><span class="title">Zeds Dead &amp; Dirtyphonics - Where Are You Now (feat. Bright Lights)</span>
+  <span class="duration">4.27</span></li><li class="track track_156827940"><span class="user">Zeds Dead</span><span class="title">Zeds Dead - Dead Price (feat. Sean Price)</span>
+  <span class="duration">3.15</span></li><li class="track track_156676690"><span class="user">Zeds Dead</span><span class="title">Zeds Dead - Blink (feat. Perry Farrell)</span>
+  <span class="duration">3.57</span></li></ul></div><div id="player" style="display: block;"><div id="controls"><span class="prev">Previous</span><span class="toggle"><span class="play">Play</span><span class="pause">Pause</span></span><span class="next">Next</span></div><div id="time"><div class="played"></div><canvas id="waveform" width="180" height="40"></canvas><div class="loaded"></div><div class="position"></div></div><div class="track"><a href="http://soundcloud.com/zedsdead" class="user" target="_blank">Zeds Dead</a><a href="http://soundcloud.com/zedsdead/zeds-dead-collapse-feat" class="title" target="_blank">Zeds Dead - Collapse (feat. Memorecks)</a>
+  <span class="duration">4.44</span></div><ul id="buttons"><li class="share"><span>Share</span></li>
+  <li class="button comment"><span>Comment</span></li>
+  <li class="button love"><span>Love</span></li>
+  <li class="button purchase"><a href="http://smarturl.it/SomewhereElseEP" target="_blank">Purchase</a></li><li class="button popup"><span>Popup</span></li>
+  <li class="soundcloud"><a href="https://stratus.soundcloud.com" target="_blank">Stratus</a></li></ul><ul id="stats"><li class="plays"><span>Plays</span> 3965681</li>
+  <li class="comments"><span>Comments</span> 625</li>
+  <li class="favorites"><span>Favoritings</span> 80413</li></ul><div id="share" style="margin-right: 160px;"><ul id="social">
+    <li><a href="http://facebook.com/sharer.php?u=http://soundcloud.com/zedsdead/zeds-dead-collapse-feat" class="facebook" target="_blank">Facebook</a></li>
+    <li><a href="http://twitter.com/intent/tweet?url=http://soundcloud.com/zedsdead/zeds-dead-collapse-feat" class="twitter" target="_blank">Twitter</a></li>
+    <li><a href="https://m.google.com/app/plus/x/?v=compose&amp;content=http://soundcloud.com/zedsdead/zeds-dead-collapse-feat" class="google" target="_blank">Google+</a></li>
+    <li><a href="mailto:?subject=Zeds Dead - Collapse (feat. Memorecks) by Zeds Dead%20-%20SoundCloud&amp;body=http://soundcloud.com/zedsdead/zeds-dead-collapse-feat" class="email">Email</a></li>
+    <li><a href="http://www.tumblr.com/share/audio?externally_hosted_url=http://soundcloud.com/zedsdead/zeds-dead-collapse-feat" class="tumblr" target="_blank">Tumblr</a></li>
+    <li><a href="http://www.reddit.com/submit?url=http://soundcloud.com/zedsdead/zeds-dead-collapse-feat" class="reddit" target="_blank">Reddit</a></li>
+    <li><a href="http://www.blogger.com/blog-this.g?n=Zeds Dead - Collapse (feat. Memorecks) by Zeds Dead&amp;u=http://soundcloud.com/zedsdead/zeds-dead-collapse-feat" class="blogger" target="_blank">Blogger</a></li>
+    <li><a href="http://www.stumbleupon.com/submit?url=http://soundcloud.com/zedsdead/zeds-dead-collapse-feat&amp;title=${share}" class="stumble" target="_blank">StumbleUpon</a></li>
+  </ul>
+  <div id="embed">
+    Embed: <input type="text" value="<iframe width=&quot;100%&quot; height=&quot;166&quot; scrolling=&quot;no&quot; src=&quot;https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F156676597&amp;auto_play=false&amp;show_artwork=true&quot; frameborder=&quot;0&quot; ></iframe>">
+  </div>
+  <span class="close sharing">Close</span></div><div id="comment" style="margin-right: 130px;"><img id="avatar"><div id="add"><input type="text" placeholder="Add your comment"></div><span class="close commenting">Close</span></div></div></div><!-- Templates-->
+
+
+
+
+
+<!-- Google Analytics--><script type="text/javascript">var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-29650954-1"]);_gaq.push(["_trackPageview"]);(function(){var a=document.createElement("script");a.type="text/javascript";a.async=true;a.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)})();</script><script async="" src="//connect.soundcloud.com/soundmanager2/soundmanager2.js"></script><div id="sm2-container" class="movieContainer " style="z-index: 10000; position: absolute; width: 6px; height: 6px; top: -9999px; left: -9999px;"><embed name="sm2movie" id="sm2movie" src="//connect.soundcloud.com/soundmanager2/soundmanager2_flash9.swf" width="auto" height="auto" quality="high" allowscriptaccess="always" bgcolor="#ffffff" pluginspage="www.macromedia.com/go/getflashplayer" title="JS/Flash audio component (SoundManager 2)" type="application/x-shockwave-flash" haspriority="true"></div></body>
 
 <h1>SOMETEXT</h1>
 </body>
