--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@ layout: default
 
 
   
-
+&nbsp;
+<div>&nbsp;
+</div>
+<div>&nbsp;
+</div>
+<div>&nbsp;
+</div>
 <div id="firstrow"class="row">
     <div class="col s12">
       <ul class="tabs">
