--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ layout: default
     <div class="col s12">
       <ul class="tabs">
         <li class="tab col s3"><a href="#wall">Wall</a></li>
+        <li class="tab col s3"><a href="#projects">Projects</a></li>
         <li class="tab col s3"><a href="#test2">Photos</a></li>
       </ul>
     </div>
@@ -32,11 +33,59 @@ layout: default
         </div>
       </div>
       </div>
-      
+  
     {% endfor %}
+
+    </div>
+    </div>
+    <div id="projects">
+    <div class="row">
+    <div class="col s4">
+            <div class="card">
+            <div class="card-image">
+              <img src="/pictures/ensoul.png">
+              <span class="card-title"></span>
+            </div>
+            <div class="card-content">
+              <p>The future of fitness wearables, ENSOLE helps empower athletes across the world. Fitting in the sole of any shoe ENSOLE's cheap price and unique feature set makes it a one of kind product.</p>
+            </div>
+            <div class="card-action projects">
+              <a href="ENSOUL.html">Be your own trainer.</a>
+            </div>
+          </div>
+          </div>
+      <div class="col s4">
+            <div class="card">
+            <div class="card-image">
+              <img src="/pictures/textlogo.png">
+              <span class="card-title"></span>
+            </div>
+            <div class="card-content">
+              <p>With the two premiere business clubs merging together, a new brand image was needed. The new brand image expresses both the professional and creative side of business. </p>
+            </div>
+            <div class="card-action projects">
+              <a href="#">Get an inside look.</a>
+            </div>
+          </div>
+    </div>
+    <div class="col s4">
+            <div class="card">
+            <div class="card-image">
+              <img src="/pictures/patagonia.png">
+              <span class="card-title"></span>
+            </div>
+            <div class="card-content">
+              <p> Explore Patagonia PA's new marketing plan. Utilizing the strengths of the brand name and its image, this campaign focuses on community and eco-awarness.  </p>
+            </div>
+            <div class="card-action projects">
+              <a href="#">Step Outside.</a>
+            </div>
+          </div>
+          </div>
+    </div>
     </div>
   </div>
-  </div>
+  
 
 
 
