--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ layout: default
       <div class="col s4">
             <div class="card">
             <div class="card-image">
-              <img src="/pictures/textlogo.png">
+              <img src="/pictures/TextLogo.png">
               <span class="card-title"></span>
             </div>
             <div class="card-content">
@@ -71,7 +71,7 @@ layout: default
     <div class="col s4">
             <div class="card">
             <div class="card-image">
-              <img src="/pictures/patagonia.png">
+              <img src="/pictures/Patagonia.png">
               <span class="card-title"></span>
             </div>
             <div class="card-content">
