--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@ layout: default
      
 
 
-  
+  <style type="text/css">
+    a:hover {
+      text-decoration: none;
+    } 
+  </style>
 
 <div id="firstrow"class="row">
     <div class="col s12">
